--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL = "mongodb://localhost:27017/QAirline"
+MONGO_URL = "mongodb+srv://hungmnk:1552004@qairline.x3u5j.mongodb.net/QAirLine"
 JWT_TOKEN = <JWT TOKEN>
 STRIPE_SECRET_KEY = <stripe_key>
 CLIENT_SITE_URL = https://abvssystem.web.app/
