--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "nodemon": "^3.1.9",
     "axios": "^1.7.9",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "nodemon": "^3.1.9",
+    "sweetalert2": "^11.15.3"
   }
 }
